--- a/setup.yml
+++ b/setup.yml
@@ -5,6 +5,11 @@
   gather_facts: False
   become: true
 
+  vars:
+    - mysql_banco: BancoTeste
+    - mysql_usuario: UserTeste 
+    - mysql_senha: SenhaTeste
+
   tasks:
   - name: "Put sudo passwordless"                                                                                                     
     become: true                                                                                                                      
@@ -15,3 +20,87 @@
       regexp: '^%sudo'                                                                                                                
       line: '%sudo ALL=(ALL) NOPASSWD: ALL'                                                                                           
       validate: 'visudo -cf %s'  
+
+#tasks para atualizar reps e instalar pacote
+  - name: Atualizar repositorios
+    apt: update_cache=yes cache_valid_time=7200
+    become: yes
+
+  - name: Instalar LEMP
+    apt:
+      name: 
+        - nginx
+        - mysql-server
+        - mysql-client
+        - php-fpm
+        - php-mysql
+        - python-mysqldb
+      state: present
+    become: yes
+
+#task php
+  - name: Instalar extensoes php
+    apt:
+      name:
+        - php-gd
+        - php-curl
+        - php-mbstring
+        - php-xml
+        - php-xmlrpc
+        - php-zip
+      state: present
+    become: yes
+
+#task mysql
+  - name: Criar banco mysql
+    mysql_db: name={{ mysql_banco }} state=present
+
+  - name: Criar user mysql
+    mysql_user: name={{ mysql_usuario }} password={{ mysql_senha }} priv=*.*:ALL,GRANT
+
+#task wordpress
+  - name: Baixar wordpress
+    get_url:
+      url=https://wordpress.org/latest.tar.gz
+      dest=/tmp/wordpress.tar.gz
+    remote_src: yes
+    become: yes
+
+  - name: Extrair o tar baixado do wordpress
+    unarchive: src=/tmp/wordpress.tar.gz dest=/var/www
+    become: yes
+    remote_src: yes
+
+  - name: Mudar nome do arquivo de configuracao
+    command: mv /var/www/wordpress/wp-config-sample.php /var/www/wordpress/wp-config.php
+    become: yes
+
+  - name: Atualizar wpconfig
+    lineinfile:
+      dest=/var/www/wordpress/wp-config.php
+      regexp="{{ item.regexp }}"
+      line="{{ item.line }}"
+    with_items:
+      - { 'regexp': "define\\('DB_NAME', '(.)+'\\);", 'line': "define('DB_NAME', '{{mysql_banco}}');"}
+      - { 'regexp': "define\\('DB_USER', '(.)+'\\);", 'line': "define('DB_USER', '{{mysql_usuario}}');"}
+      - { 'regexp': "define\\('DB_PASSWORD', '(.)+'\\);", 'line': "define('DB_PASSWORD', '{{mysql_senha}}');"}  
+    become: yes 
+
+  - name: Mudar proprietario do wordpress
+    file: path=/var/www/wordpress/ owner=www-data group=www-data state=directory recurse=yes
+
+  - name: Iniciar php
+    service: name=php7.2-fpm state=started enabled=yes
+  
+  - name: Reiniciar nginx
+    service: name=nginx state=restarted enabled=yes
+
+#task nginx
+  - name: Configurar Vhost wordpress
+    template: src=roles/nginx/templates/default.conf dest=/etc/nginx/conf.d/default.conf
+    notify: 
+      - restart nginx
+
+  handlers:
+    - name: restart nginx
+      service: name=nginx state=restarted enabled=yes
